2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: Sends files
	* src/RequestHandler.cs: Receives files
	* src/GiverService.cs: removed unneeded string
	* src/Application.cs: Added new handlers for new classes
	* src/Makefile.am: new files
	* src/PayloadInfo.cs: no longer needed
	* src/ReceivingHandler.cs: renamed to Request Handler
	* giver.mdp: Changed around some files

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs, src/Application.cs, src/ServiceLocator.cs,
	  src/SendingHandler.cs, src/ReceivingHandler.cs: Moved the socket
	  communication over to http

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: Changed the service name so two instances can
	  run on a box
	* src/GiverMenuItem.cs: Switched the graphic size to one that fits
	* src/Application.cs: Debug
	* src/ServiceLocator.cs: Turned on the show locals for debugging
	* giver.mdp: truned on gdk.sharp

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/giver-48.png: added correct size

2007-06-26  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverService.cs: debug
	* src/Application.cs: Added wrappers of Avahi isn't running
	* src/Makefile.am, data/images/giver-22.png, data/images/giver-32.png,
	  data/images/giver-24.png, data/images/giver-16.png,
	  data/images/giver-44.png, data/images/Makefile.am,
	  data/images/giver-256.png, data/images/giveroff-24.png: Updated
	  icons from jimmac

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/SendingHandler.cs: debug
	* src/ReceivingHandler.cs: changed the encoding and it fixed a problems
	  getting the file name

2007-06-25  Calvin Gaisford <calvinrg@gmail.com> 

	* src/GiverMenuItem.cs: Added parameters to get the service from the
	  menu item
	* src/Application.cs: Added handlers to send files (well, test it)
	* src/Makefile.am: Added SendingHandler
	* src/PayloadInfo.cs: Added public property to get name